added library flags and add

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,3 +2,6 @@ bin_PROGRAMS=bip39c
 bip39c_SOURCES = bip39c.c 
 
 bip39c_CFLAGS = -I$(top_srcdir) $(MY_CFLAGS)
+
+bip39c_LDFLAGS	= @LDFLAGS@
+bip39c_LDADD	= -lssl -lcrypto
