--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,7 @@
 bin_PROGRAMS=bip39c
 bip39c_SOURCES = bip39c.c 
 
-bip39c_CFLAGS = -I$(top_srcdir) $(MY_CFLAGS)
+bip39c_CFLAGS = -I$(top_srcdir) $(MY_CFLAGS) -std=c99
 
 bip39c_LDFLAGS	= @LDFLAGS@
 bip39c_LDADD	= -lssl -lcrypto
