--- a/Makefile.am
+++ b/Makefile.am
@@ -3,4 +3,12 @@ SUBDIRS=src
 install-data-local:
 	mkdir -p /usr/local/data
 	cp src/english.txt /usr/local/data/
+	cp src/spanish.txt /usr/local/data/
+	cp src/japanese.txt /usr/local/data/
+	cp src/italian.txt /usr/local/data/
+	cp src/french.txt /usr/local/data/
+	cp src/korean.txt /usr/local/data/
+	cp src/chinese-simplified.txt /usr/local/data/
+	cp src/chinese-traditional.txt /usr/local/data/
+
 
