--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 bin_PROGRAMS=bip39c
-bip39c_SOURCES = bip39c.c 
+bip39c_SOURCES = bip39c.c crypto.c print_util.c conversion.c
 
 bip39c_CFLAGS = -I$(top_srcdir) $(MY_CFLAGS) 
 
